--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -446,5 +446,229 @@
   "sidebar.apiSidebar.category.📑 Testnet API Endpoints.link.generated-index.description": {
     "message": "Explore the various Staking API Endpoints for Core Testnet2",
     "description": "The generated-index page description for category 📑 Testnet API Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.tutorialSidebar.category.api-documents": {
+    "message": "api-documents",
+    "description": "The label for category api-documents in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.tutorials": {
+    "message": "tutorials",
+    "description": "The label for category tutorials in sidebar tutorialSidebar"
+  },
+  "sidebar.devGuideSidebar.category.RPC Endpoints.link.generated-index.title": {
+    "message": "Core RPC Endpoints",
+    "description": "The generated-index page title for category RPC Endpoints in sidebar devGuideSidebar"
+  },
+  "sidebar.devGuideSidebar.category.RPC Endpoints.link.generated-index.description": {
+    "message": "Core RPC Endpoints: Key Tools for Blockchain Development and Interaction",
+    "description": "The generated-index page description for category RPC Endpoints in sidebar devGuideSidebar"
+  },
+  "sidebar.devGuideSidebar.category.Dev Tools": {
+    "message": "Dev Tools",
+    "description": "The label for category Dev Tools in sidebar devGuideSidebar"
+  },
+  "sidebar.devGuideSidebar.category.Deploying Tokens on Core": {
+    "message": "Deploying Tokens on Core",
+    "description": "The label for category Deploying Tokens on Core in sidebar devGuideSidebar"
+  },
+  "sidebar.devGuideSidebar.link.Configure Custom Tokens": {
+    "message": "Configure Custom Tokens",
+    "description": "The label for link Configure Custom Tokens in sidebar devGuideSidebar, linking to https://support.metamask.io/manage-crypto/tokens/how-to-display-tokens-in-metamask/"
+  },
+  "sidebar.devGuideSidebar.link.Import Accounts": {
+    "message": "Import Accounts",
+    "description": "The label for link Import Accounts in sidebar devGuideSidebar, linking to https://support.metamask.io/start/how-to-import-an-account/"
+  },
+  "sidebar.devGuideSidebar.link.Build dapp on Core": {
+    "message": "Build dapp on Core",
+    "description": "The label for link Build dapp on Core in sidebar devGuideSidebar, linking to https://github.com/coredao-org/dapp-tutorial"
+  },
+  "sidebar.devGuideSidebar.link.Switchboard VRF": {
+    "message": "Switchboard VRF",
+    "description": "The label for link Switchboard VRF in sidebar devGuideSidebar, linking to https://docs.switchboard.xyz/product-documentation/randomness/tutorials/evm"
+  },
+  "sidebar.apiSidebar.category.API Endpoints": {
+    "message": "API Endpoints",
+    "description": "The label for category API Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.API Endpoints.link.generated-index.title": {
+    "message": "Core Scan API Documentation",
+    "description": "The generated-index page title for category API Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.API Endpoints.link.generated-index.description": {
+    "message": "Explore the various Core Scan API Endpoints",
+    "description": "The generated-index page description for category API Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.Accounts": {
+    "message": "Accounts",
+    "description": "The label for category Accounts in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.Blocks": {
+    "message": "Blocks",
+    "description": "The label for category Blocks in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.Contracts": {
+    "message": "Contracts",
+    "description": "The label for category Contracts in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.Geth Proxy": {
+    "message": "Geth Proxy",
+    "description": "The label for category Geth Proxy in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.Stats": {
+    "message": "Stats",
+    "description": "The label for category Stats in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.doc.Get CORE balance by address": {
+    "message": "Get CORE balance by address",
+    "description": "The label for the doc item Get CORE balance by address in sidebar apiSidebar, linking to the doc api/testnet/get-balance-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get internal transactions by block range": {
+    "message": "Get internal transactions by block range",
+    "description": "The label for the doc item Get internal transactions by block range in sidebar apiSidebar, linking to the doc api/testnet/get-internal-tx-by-block-range-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get internal transactions by transaction hash": {
+    "message": "Get internal transactions by transaction hash",
+    "description": "The label for the doc item Get internal transactions by transaction hash in sidebar apiSidebar, linking to the doc api/testnet/get-internal-tx-by-tx-hash-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get list of blocks validated by address": {
+    "message": "Get list of blocks validated by address",
+    "description": "The label for the doc item Get list of blocks validated by address in sidebar apiSidebar, linking to the doc api/testnet/get-mined-blocks-by-address-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get list of ERC20 transfer events by address": {
+    "message": "Get list of ERC20 transfer events by address",
+    "description": "The label for the doc item Get list of ERC20 transfer events by address in sidebar apiSidebar, linking to the doc api/testnet/get-erc-20-transfers-by-address-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get list of ERC721 transfer events by address": {
+    "message": "Get list of ERC721 transfer events by address",
+    "description": "The label for the doc item Get list of ERC721 transfer events by address in sidebar apiSidebar, linking to the doc api/testnet/get-erc-721-transfers-by-address-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get list of transactions by address": {
+    "message": "Get list of transactions by address",
+    "description": "The label for the doc item Get list of transactions by address in sidebar apiSidebar, linking to the doc api/testnet/get-tx-list-by-address-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get block number by timestamp": {
+    "message": "Get block number by timestamp",
+    "description": "The label for the doc item Get block number by timestamp in sidebar apiSidebar, linking to the doc api/testnet/get-block-number-by-timestamp-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get block rewards by block number": {
+    "message": "Get block rewards by block number",
+    "description": "The label for the doc item Get block rewards by block number in sidebar apiSidebar, linking to the doc api/testnet/get-block-rewards-by-block-number-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get estimated block countdown time by block number": {
+    "message": "Get estimated block countdown time by block number",
+    "description": "The label for the doc item Get estimated block countdown time by block number in sidebar apiSidebar, linking to the doc api/testnet/get-estimated-block-countdown-time-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get ABI of verified contract": {
+    "message": "Get ABI of verified contract",
+    "description": "The label for the doc item Get ABI of verified contract in sidebar apiSidebar, linking to the doc api/testnet/get-contract-abi-using-get"
+  },
+  "sidebar.apiSidebar.doc.Check proxy contract verification submission status using cURL": {
+    "message": "Check proxy contract verification submission status using cURL",
+    "description": "The label for the doc item Check proxy contract verification submission status using cURL in sidebar apiSidebar, linking to the doc api/testnet/check-proxy-contract-verification-status-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get source code of verified contract": {
+    "message": "Get source code of verified contract",
+    "description": "The label for the doc item Get source code of verified contract in sidebar apiSidebar, linking to the doc api/testnet/get-contract-source-code-using-get"
+  },
+  "sidebar.apiSidebar.doc.Verify proxy contract": {
+    "message": "Verify proxy contract",
+    "description": "The label for the doc item Verify proxy contract in sidebar apiSidebar, linking to the doc api/testnet/verify-proxy-contract-using-post"
+  },
+  "sidebar.apiSidebar.doc.Verify proxy contract using cURL": {
+    "message": "Verify proxy contract using cURL",
+    "description": "The label for the doc item Verify proxy contract using cURL in sidebar apiSidebar, linking to the doc api/testnet/verify-proxy-contract-curl-using-post"
+  },
+  "sidebar.apiSidebar.doc.Verify source code": {
+    "message": "Verify source code",
+    "description": "The label for the doc item Verify source code in sidebar apiSidebar, linking to the doc api/testnet/verify-source-code-using-post"
+  },
+  "sidebar.apiSidebar.doc.Get block number": {
+    "message": "Get block number",
+    "description": "The label for the doc item Get block number in sidebar apiSidebar, linking to the doc api/testnet/get-block-number-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get transaction receipt": {
+    "message": "Get transaction receipt",
+    "description": "The label for the doc item Get transaction receipt in sidebar apiSidebar, linking to the doc api/testnet/get-transaction-receipt-using-get"
+  },
+  "sidebar.apiSidebar.doc.Estimate gas": {
+    "message": "Estimate gas",
+    "description": "The label for the doc item Estimate gas in sidebar apiSidebar, linking to the doc api/testnet/estimate-gas-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get gas price": {
+    "message": "Get gas price",
+    "description": "The label for the doc item Get gas price in sidebar apiSidebar, linking to the doc api/testnet/get-gas-price-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get block by number": {
+    "message": "Get block by number",
+    "description": "The label for the doc item Get block by number in sidebar apiSidebar, linking to the doc api/testnet/get-block-by-number-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get block transaction count by number": {
+    "message": "Get block transaction count by number",
+    "description": "The label for the doc item Get block transaction count by number in sidebar apiSidebar, linking to the doc api/testnet/get-block-transaction-count-by-number-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get code": {
+    "message": "Get code",
+    "description": "The label for the doc item Get code in sidebar apiSidebar, linking to the doc api/testnet/get-code-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get storage at": {
+    "message": "Get storage at",
+    "description": "The label for the doc item Get storage at in sidebar apiSidebar, linking to the doc api/testnet/get-storage-at-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get transaction by block number and index": {
+    "message": "Get transaction by block number and index",
+    "description": "The label for the doc item Get transaction by block number and index in sidebar apiSidebar, linking to the doc api/testnet/get-transaction-by-block-number-and-index-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get transaction by hash": {
+    "message": "Get transaction by hash",
+    "description": "The label for the doc item Get transaction by hash in sidebar apiSidebar, linking to the doc api/testnet/get-transaction-by-hash-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get transaction count": {
+    "message": "Get transaction count",
+    "description": "The label for the doc item Get transaction count in sidebar apiSidebar, linking to the doc api/testnet/get-transaction-count-using-get"
+  },
+  "sidebar.apiSidebar.doc.Send raw transaction": {
+    "message": "Send raw transaction",
+    "description": "The label for the doc item Send raw transaction in sidebar apiSidebar, linking to the doc api/testnet/send-raw-transaction-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get last core price": {
+    "message": "Get last core price",
+    "description": "The label for the doc item Get last core price in sidebar apiSidebar, linking to the doc api/testnet/get-last-core-price-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get list of validators": {
+    "message": "Get list of validators",
+    "description": "The label for the doc item Get list of validators in sidebar apiSidebar, linking to the doc api/testnet/get-list-of-validators-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get total core supply": {
+    "message": "Get total core supply",
+    "description": "The label for the doc item Get total core supply in sidebar apiSidebar, linking to the doc api/testnet/get-total-core-supply-using-get"
+  },
+  "sidebar.apiSidebar.doc.Get transaction receipt status": {
+    "message": "Get transaction receipt status",
+    "description": "The label for the doc item Get transaction receipt status in sidebar apiSidebar, linking to the doc api/testnet/get-transaction-receipt-status-using-get"
+  },
+  "sidebar.apiSidebar.category.📑 Mainnet Endpoints": {
+    "message": "📑 Mainnet Endpoints",
+    "description": "The label for category 📑 Mainnet Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.📑 Mainnet Endpoints.link.generated-index.title": {
+    "message": "Core Scan API Documentation",
+    "description": "The generated-index page title for category 📑 Mainnet Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.📑 Mainnet Endpoints.link.generated-index.description": {
+    "message": "Explore the various Core Scan API Endpoints",
+    "description": "The generated-index page description for category 📑 Mainnet Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.📑 Testnet Endpoints": {
+    "message": "📑 Testnet Endpoints",
+    "description": "The label for category 📑 Testnet Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.📑 Testnet Endpoints.link.generated-index.title": {
+    "message": "Core Scan API Documentation",
+    "description": "The generated-index page title for category 📑 Testnet Endpoints in sidebar apiSidebar"
+  },
+  "sidebar.apiSidebar.category.📑 Testnet Endpoints.link.generated-index.description": {
+    "message": "Explore the various Core Scan API Endpoints",
+    "description": "The generated-index page description for category 📑 Testnet Endpoints in sidebar apiSidebar"
   }
 }
