--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -112,7 +112,7 @@
     "description": "The generated-index page title for category Core Concepts in sidebar learnSidebar"
   },
   "sidebar.learnSidebar.category.Core Concepts.link.generated-index.description": {
-    "message": "Learn about the Nuts and Bolts of the Core Ecossytem!",
+    "message": "Learn about the Nuts and Bolts of the Core Ecosystem!",
     "description": "The generated-index page description for category Core Concepts in sidebar learnSidebar"
   },
   "sidebar.learnSidebar.category.Satoshi Plus Consensus": {
