--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -128,7 +128,7 @@
     "description": "The generated-index page title for category Products in sidebar learnSidebar"
   },
   "sidebar.learnSidebar.category.Products.link.generated-index.description": {
-    "message": "Learn about the different innovative products offered by Core that are helping in unclocking the DeFi landscape for Bitcoin!",
+    "message": "Learn about the different innovative products offered by Core that are helping in unlocking the DeFi landscape for Bitcoin!",
     "description": "The generated-index page description for category Products in sidebar learnSidebar"
   },
   "sidebar.learnSidebar.category.stCORE": {
